parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> CREATE
Rule 2     INICIO -> EXECUTE
Rule 3     CREATE -> TkCreate TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
Rule 4     DECLARE -> TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE
Rule 5     DECLARE -> <empty>
Rule 6     TYPE -> TkInt
Rule 7     TYPE -> TkBool
Rule 8     TYPE -> TkChar
Rule 9     LISTA_IDENT -> TkComa IDENT LISTA_IDENT
Rule 10    LISTA_IDENT -> <empty>
Rule 11    IDENT -> TkIdent
Rule 12    COMPORTAMIENTO -> TkOn CONDICION TkDosPuntos INST_ROBOT TkEnd COMPORTAMIENTO
Rule 13    COMPORTAMIENTO -> <empty>
Rule 14    CONDICION -> TkActivation
Rule 15    CONDICION -> TkDeactivation
Rule 16    CONDICION -> TkDefault
Rule 17    CONDICION -> EXP
Rule 18    EXP -> EXP TkConjuncion EXP
Rule 19    EXP -> EXP TkDisyuncion EXP
Rule 20    EXP -> EXP TkIgual EXP
Rule 21    EXP -> EXP TkDistinto EXP
Rule 22    EXP -> IDENT
Rule 23    EXP -> LITERAL_BOOL
Rule 24    EXP -> TkParAbre EXP TkParCierra
Rule 25    EXP -> TkNegacion EXP
Rule 26    EXP -> TkResta EXP
Rule 27    EXP -> EXP TkMenor EXP
Rule 28    EXP -> EXP TkMenorIgual EXP
Rule 29    EXP -> EXP TkMayor EXP
Rule 30    EXP -> EXP TkMayorIgual EXP
Rule 31    EXP -> EXP TkSuma EXP
Rule 32    EXP -> EXP TkResta EXP
Rule 33    EXP -> EXP TkMult EXP
Rule 34    EXP -> EXP TkDiv EXP
Rule 35    EXP -> EXP TkMod EXP
Rule 36    EXP -> TkNum
Rule 37    LITERAL_BOOL -> TkTrue
Rule 38    LITERAL_BOOL -> TkFalse
Rule 39    INST_ROBOT -> TkStore EXPRESION TkPunto INST_ROBOT_A
Rule 40    INST_ROBOT -> TkCollect COLLECT TkPunto INST_ROBOT_A
Rule 41    INST_ROBOT -> TkDrop EXPRESION TkPunto INST_ROBOT_A
Rule 42    INST_ROBOT -> DIRECCION TkPunto INST_ROBOT_A
Rule 43    INST_ROBOT -> DIRECCION EXP TkPunto INST_ROBOT_A
Rule 44    INST_ROBOT -> READ TkPunto INST_ROBOT_A
Rule 45    INST_ROBOT -> TkSend TkPunto INST_ROBOT_A
Rule 46    INST_ROBOT -> TkRecieve TkPunto INST_ROBOT_A
Rule 47    INST_ROBOT_A -> INST_ROBOT
Rule 48    INST_ROBOT_A -> <empty>
Rule 49    EXPRESION -> EXP
Rule 50    EXPRESION -> TkCaracter
Rule 51    DIRECCION -> TkLeft
Rule 52    DIRECCION -> TkRight
Rule 53    DIRECCION -> TkUp
Rule 54    DIRECCION -> TkDown
Rule 55    COLLECT -> TkAs IDENT
Rule 56    COLLECT -> <empty>
Rule 57    READ -> TkRead
Rule 58    READ -> TkRead TkAs IDENT
Rule 59    EXECUTE -> TkExecute INST_CONTROLADOR TkEnd
Rule 60    INST_CONTROLADOR -> TkActivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
Rule 61    INST_CONTROLADOR -> TkAdvance IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
Rule 62    INST_CONTROLADOR -> TkDeactivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
Rule 63    INST_CONTROLADOR -> TkIf EXP TkDosPuntos CONTENIDO TkEnd INST_CONTROLADOR_A
Rule 64    INST_CONTROLADOR -> TkWhile EXP TkDosPuntos INST_CONTROLADOR TkEnd INST_CONTROLADOR_A
Rule 65    INST_CONTROLADOR -> INICIO INST_CONTROLADOR_A
Rule 66    CONTENIDO -> INST_CONTROLADOR
Rule 67    CONTENIDO -> INST_CONTROLADOR TkElse TkDosPuntos INST_CONTROLADOR
Rule 68    INST_CONTROLADOR_A -> INST_CONTROLADOR
Rule 69    INST_CONTROLADOR_A -> <empty>

Terminals, with rules where they appear

TkActivate           : 60
TkActivation         : 14
TkAdvance            : 61
TkAs                 : 55 58
TkBool               : 7
TkBot                : 3 4
TkCaracter           : 50
TkChar               : 8
TkCollect            : 40
TkComa               : 9
TkConjuncion         : 18
TkCreate             : 3
TkDeactivate         : 62
TkDeactivation       : 15
TkDefault            : 16
TkDistinto           : 21
TkDisyuncion         : 19
TkDiv                : 34
TkDosPuntos          : 12 63 64 67
TkDown               : 54
TkDrop               : 41
TkElse               : 67
TkEnd                : 3 4 12 59 63 64
TkExecute            : 59
TkFalse              : 38
TkIdent              : 11
TkIf                 : 63
TkIgual              : 20
TkInt                : 6
TkLeft               : 51
TkMayor              : 29
TkMayorIgual         : 30
TkMenor              : 27
TkMenorIgual         : 28
TkMod                : 35
TkMult               : 33
TkNegacion           : 25
TkNum                : 36
TkOn                 : 12
TkParAbre            : 24
TkParCierra          : 24
TkPunto              : 39 40 41 42 43 44 45 46 60 61 62
TkRead               : 57 58
TkRecieve            : 46
TkResta              : 26 32
TkRight              : 52
TkSend               : 45
TkStore              : 39
TkSuma               : 31
TkTrue               : 37
TkUp                 : 53
TkWhile              : 64
error                : 

Nonterminals, with rules where they appear

COLLECT              : 40
COMPORTAMIENTO       : 3 4 12
CONDICION            : 12
CONTENIDO            : 63
CREATE               : 1
DECLARE              : 3 4
DIRECCION            : 42 43
EXECUTE              : 2 3
EXP                  : 17 18 18 19 19 20 20 21 21 24 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 43 49 63 64
EXPRESION            : 39 41
IDENT                : 3 4 9 22 55 58 60 61 62
INICIO               : 65 0
INST_CONTROLADOR     : 59 64 66 67 67 68
INST_CONTROLADOR_A   : 60 61 62 63 64 65
INST_ROBOT           : 12 47
INST_ROBOT_A         : 39 40 41 42 43 44 45 46
LISTA_IDENT          : 3 4 9 60 61 62
LITERAL_BOOL         : 23
READ                 : 44
TYPE                 : 3 4

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . CREATE
    (2) INICIO -> . EXECUTE
    (3) CREATE -> . TkCreate TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
    (59) EXECUTE -> . TkExecute INST_CONTROLADOR TkEnd

    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 5

    INICIO                         shift and go to state 3
    CREATE                         shift and go to state 4
    EXECUTE                        shift and go to state 2

state 1

    (3) CREATE -> TkCreate . TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
    (6) TYPE -> . TkInt
    (7) TYPE -> . TkBool
    (8) TYPE -> . TkChar

    TkInt           shift and go to state 7
    TkBool          shift and go to state 6
    TkChar          shift and go to state 9

    TYPE                           shift and go to state 8

state 2

    (2) INICIO -> EXECUTE .

    TkActivate      reduce using rule 2 (INICIO -> EXECUTE .)
    TkAdvance       reduce using rule 2 (INICIO -> EXECUTE .)
    TkDeactivate    reduce using rule 2 (INICIO -> EXECUTE .)
    TkIf            reduce using rule 2 (INICIO -> EXECUTE .)
    TkWhile         reduce using rule 2 (INICIO -> EXECUTE .)
    TkCreate        reduce using rule 2 (INICIO -> EXECUTE .)
    TkExecute       reduce using rule 2 (INICIO -> EXECUTE .)
    TkEnd           reduce using rule 2 (INICIO -> EXECUTE .)
    TkElse          reduce using rule 2 (INICIO -> EXECUTE .)
    $end            reduce using rule 2 (INICIO -> EXECUTE .)


state 3

    (0) S' -> INICIO .



state 4

    (1) INICIO -> CREATE .

    TkActivate      reduce using rule 1 (INICIO -> CREATE .)
    TkAdvance       reduce using rule 1 (INICIO -> CREATE .)
    TkDeactivate    reduce using rule 1 (INICIO -> CREATE .)
    TkIf            reduce using rule 1 (INICIO -> CREATE .)
    TkWhile         reduce using rule 1 (INICIO -> CREATE .)
    TkCreate        reduce using rule 1 (INICIO -> CREATE .)
    TkExecute       reduce using rule 1 (INICIO -> CREATE .)
    TkEnd           reduce using rule 1 (INICIO -> CREATE .)
    TkElse          reduce using rule 1 (INICIO -> CREATE .)
    $end            reduce using rule 1 (INICIO -> CREATE .)


state 5

    (59) EXECUTE -> TkExecute . INST_CONTROLADOR TkEnd
    (60) INST_CONTROLADOR -> . TkActivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (61) INST_CONTROLADOR -> . TkAdvance IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (62) INST_CONTROLADOR -> . TkDeactivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (63) INST_CONTROLADOR -> . TkIf EXP TkDosPuntos CONTENIDO TkEnd INST_CONTROLADOR_A
    (64) INST_CONTROLADOR -> . TkWhile EXP TkDosPuntos INST_CONTROLADOR TkEnd INST_CONTROLADOR_A
    (65) INST_CONTROLADOR -> . INICIO INST_CONTROLADOR_A
    (1) INICIO -> . CREATE
    (2) INICIO -> . EXECUTE
    (3) CREATE -> . TkCreate TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
    (59) EXECUTE -> . TkExecute INST_CONTROLADOR TkEnd

    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 12
    TkDeactivate    shift and go to state 14
    TkIf            shift and go to state 11
    TkWhile         shift and go to state 10
    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 5

    EXECUTE                        shift and go to state 2
    INICIO                         shift and go to state 15
    INST_CONTROLADOR               shift and go to state 16
    CREATE                         shift and go to state 4

state 6

    (7) TYPE -> TkBool .

    TkBot           reduce using rule 7 (TYPE -> TkBool .)


state 7

    (6) TYPE -> TkInt .

    TkBot           reduce using rule 6 (TYPE -> TkInt .)


state 8

    (3) CREATE -> TkCreate TYPE . TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE

    TkBot           shift and go to state 17


state 9

    (8) TYPE -> TkChar .

    TkBot           reduce using rule 8 (TYPE -> TkChar .)


state 10

    (64) INST_CONTROLADOR -> TkWhile . EXP TkDosPuntos INST_CONTROLADOR TkEnd INST_CONTROLADOR_A
    (18) EXP -> . EXP TkConjuncion EXP
    (19) EXP -> . EXP TkDisyuncion EXP
    (20) EXP -> . EXP TkIgual EXP
    (21) EXP -> . EXP TkDistinto EXP
    (22) EXP -> . IDENT
    (23) EXP -> . LITERAL_BOOL
    (24) EXP -> . TkParAbre EXP TkParCierra
    (25) EXP -> . TkNegacion EXP
    (26) EXP -> . TkResta EXP
    (27) EXP -> . EXP TkMenor EXP
    (28) EXP -> . EXP TkMenorIgual EXP
    (29) EXP -> . EXP TkMayor EXP
    (30) EXP -> . EXP TkMayorIgual EXP
    (31) EXP -> . EXP TkSuma EXP
    (32) EXP -> . EXP TkResta EXP
    (33) EXP -> . EXP TkMult EXP
    (34) EXP -> . EXP TkDiv EXP
    (35) EXP -> . EXP TkMod EXP
    (36) EXP -> . TkNum
    (11) IDENT -> . TkIdent
    (37) LITERAL_BOOL -> . TkTrue
    (38) LITERAL_BOOL -> . TkFalse

    TkParAbre       shift and go to state 19
    TkNegacion      shift and go to state 22
    TkResta         shift and go to state 20
    TkNum           shift and go to state 21
    TkIdent         shift and go to state 27
    TkTrue          shift and go to state 18
    TkFalse         shift and go to state 24

    IDENT                          shift and go to state 26
    EXP                            shift and go to state 23
    LITERAL_BOOL                   shift and go to state 25

state 11

    (63) INST_CONTROLADOR -> TkIf . EXP TkDosPuntos CONTENIDO TkEnd INST_CONTROLADOR_A
    (18) EXP -> . EXP TkConjuncion EXP
    (19) EXP -> . EXP TkDisyuncion EXP
    (20) EXP -> . EXP TkIgual EXP
    (21) EXP -> . EXP TkDistinto EXP
    (22) EXP -> . IDENT
    (23) EXP -> . LITERAL_BOOL
    (24) EXP -> . TkParAbre EXP TkParCierra
    (25) EXP -> . TkNegacion EXP
    (26) EXP -> . TkResta EXP
    (27) EXP -> . EXP TkMenor EXP
    (28) EXP -> . EXP TkMenorIgual EXP
    (29) EXP -> . EXP TkMayor EXP
    (30) EXP -> . EXP TkMayorIgual EXP
    (31) EXP -> . EXP TkSuma EXP
    (32) EXP -> . EXP TkResta EXP
    (33) EXP -> . EXP TkMult EXP
    (34) EXP -> . EXP TkDiv EXP
    (35) EXP -> . EXP TkMod EXP
    (36) EXP -> . TkNum
    (11) IDENT -> . TkIdent
    (37) LITERAL_BOOL -> . TkTrue
    (38) LITERAL_BOOL -> . TkFalse

    TkParAbre       shift and go to state 19
    TkNegacion      shift and go to state 22
    TkResta         shift and go to state 20
    TkNum           shift and go to state 21
    TkIdent         shift and go to state 27
    TkTrue          shift and go to state 18
    TkFalse         shift and go to state 24

    IDENT                          shift and go to state 26
    EXP                            shift and go to state 28
    LITERAL_BOOL                   shift and go to state 25

state 12

    (61) INST_CONTROLADOR -> TkAdvance . IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (11) IDENT -> . TkIdent

    TkIdent         shift and go to state 27

    IDENT                          shift and go to state 29

state 13

    (60) INST_CONTROLADOR -> TkActivate . IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (11) IDENT -> . TkIdent

    TkIdent         shift and go to state 27

    IDENT                          shift and go to state 30

state 14

    (62) INST_CONTROLADOR -> TkDeactivate . IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (11) IDENT -> . TkIdent

    TkIdent         shift and go to state 27

    IDENT                          shift and go to state 31

state 15

    (65) INST_CONTROLADOR -> INICIO . INST_CONTROLADOR_A
    (68) INST_CONTROLADOR_A -> . INST_CONTROLADOR
    (69) INST_CONTROLADOR_A -> .
    (60) INST_CONTROLADOR -> . TkActivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (61) INST_CONTROLADOR -> . TkAdvance IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (62) INST_CONTROLADOR -> . TkDeactivate IDENT LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (63) INST_CONTROLADOR -> . TkIf EXP TkDosPuntos CONTENIDO TkEnd INST_CONTROLADOR_A
    (64) INST_CONTROLADOR -> . TkWhile EXP TkDosPuntos INST_CONTROLADOR TkEnd INST_CONTROLADOR_A
    (65) INST_CONTROLADOR -> . INICIO INST_CONTROLADOR_A
    (1) INICIO -> . CREATE
    (2) INICIO -> . EXECUTE
    (3) CREATE -> . TkCreate TYPE TkBot IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
    (59) EXECUTE -> . TkExecute INST_CONTROLADOR TkEnd

    TkEnd           reduce using rule 69 (INST_CONTROLADOR_A -> .)
    TkElse          reduce using rule 69 (INST_CONTROLADOR_A -> .)
    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 12
    TkDeactivate    shift and go to state 14
    TkIf            shift and go to state 11
    TkWhile         shift and go to state 10
    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 5

    INST_CONTROLADOR_A             shift and go to state 32
    EXECUTE                        shift and go to state 2
    INICIO                         shift and go to state 15
    INST_CONTROLADOR               shift and go to state 33
    CREATE                         shift and go to state 4

state 16

    (59) EXECUTE -> TkExecute INST_CONTROLADOR . TkEnd

    TkEnd           shift and go to state 34


state 17

    (3) CREATE -> TkCreate TYPE TkBot . IDENT LISTA_IDENT COMPORTAMIENTO TkEnd DECLARE EXECUTE
    (11) IDENT -> . TkIdent

    TkIdent         shift and go to state 27

    IDENT                          shift and go to state 35

state 18

    (37) LITERAL_BOOL -> TkTrue .

    TkConjuncion    reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkDisyuncion    reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkIgual         reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkDistinto      reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMenor         reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMenorIgual    reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMayor         reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMayorIgual    reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkSuma          reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkResta         reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMult          reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkDiv           reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkMod           reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkDosPuntos     reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkParCierra     reduce using rule 37 (LITERAL_BOOL -> TkTrue .)
    TkPunto         reduce using rule 37 (LITERAL_BOOL -> TkTrue .)


state 19

    (24) EXP -> TkParAbre . EXP TkParCierra
    (18) EXP -> . EXP TkConjuncion EXP
    (19) EXP -> . EXP TkDisyuncion EXP
    (20) EXP -> . EXP TkIgual EXP
    (21) EXP -> . EXP TkDistinto EXP
    (22) EXP -> . IDENT
    (23) EXP -> . LITERAL_BOOL
    (24) EXP -> . TkParAbre EXP TkParCierra
    (25) EXP -> . TkNegacion EXP
    (26) EXP -> . TkResta EXP
    (27) EXP -> . EXP TkMenor EXP
    (28) EXP -> . EXP TkMenorIgual EXP
    (29) EXP -> . EXP TkMayor EXP
    (30) EXP -> . EXP TkMayorIgual EXP
    (31) EXP -> . EXP TkSuma EXP
    (32) EXP -> . EXP TkResta EXP
    (33) EXP -> . EXP TkMult EXP
    (34) EXP -> . EXP TkDiv EXP
    (35) EXP -> . EXP TkMod EXP
    (36) EXP -> . TkNum
    (11) IDENT -> . TkIdent
    (37) LITERAL_BOOL -> . TkTrue
    (38) LITERAL_BOOL -> . TkFalse

    TkParAbre       shift and go to state 19
    TkNegacion      shift and go to state 22
    TkResta         shift and go to state 20
    TkNum           shift and go to state 21
    TkIdent         shift and go to state 27
    TkTrue          shift and go to state 18
    TkFalse         shift and go to state 24

    IDENT                          shift and go to state 26
    EXP                            shift and go to state 36
    LITERAL_BOOL                   shift and go to state 25

state 20

    (26) EXP -> TkResta . EXP
    (18) EXP -> . EXP TkConjuncion EXP
    (19) EXP -> . EXP TkDisyuncion EXP
    (20) EXP -> . EXP TkIgual EXP
    (21) EXP -> . EXP TkDistinto EXP
    (22) EXP -> . IDENT
    (23) EXP -> . LITERAL_BOOL
    (24) EXP -> . TkParAbre EXP TkParCierra
    (25) EXP -> . TkNegacion EXP
    (26) EXP -> . TkResta EXP
    (27) EXP -> . EXP TkMenor EXP
    (28) EXP -> . EXP TkMenorIgual EXP
    (29) EXP -> . EXP TkMayor EXP
    (30) EXP -> . EXP TkMayorIgual EXP
    (31) EXP -> . EXP TkSuma EXP
    (32) EXP -> . EXP TkResta EXP
    (33) EXP -> . EXP TkMult EXP
    (34) EXP -> . EXP TkDiv EXP
    (35) EXP -> . EXP TkMod EXP
    (36) EXP -> . TkNum
    (11) IDENT -> . TkIdent
    (37) LITERAL_BOOL -> . TkTrue
    (38) LITERAL_BOOL -> . TkFalse

    TkParAbre       shift and go to state 19
    TkNegacion      shift and go to state 22
    TkResta         shift and go to state 20
    TkNum           shift and go to state 21
    TkIdent         shift and go to state 27
    TkTrue          shift and go to state 18
    TkFalse         shift and go to state 24

    IDENT                          shift and go to state 26
    EXP                            shift and go to state 37
    LITERAL_BOOL                   shift and go to state 25

state 21

    (36) EXP -> TkNum .

    TkConjuncion    reduce using rule 36 (EXP -> TkNum .)
    TkDisyuncion    reduce using rule 36 (EXP -> TkNum .)
    TkIgual         reduce using rule 36 (EXP -> TkNum .)
    TkDistinto      reduce using rule 36 (EXP -> TkNum .)
    TkMenor         reduce using rule 36 (EXP -> TkNum .)
    TkMenorIgual    reduce using rule 36 (EXP -> TkNum .)
    TkMayor         reduce using rule 36 (EXP -> TkNum .)
    TkMayorIgual    reduce using rule 36 (EXP -> TkNum .)
    TkSuma          reduce using rule 36 (EXP -> TkNum .)
    TkResta         reduce using rule 36 (EXP -> TkNum .)
    TkMult          reduce using rule 36 (EXP -> TkNum .)
    TkDiv           reduce using rule 36 (EXP -> TkNum .)
    TkMod           reduce using rule 36 (EXP -> TkNum .)
    TkPunto         reduce using rule 36 (EXP -> TkNum .)
    TkDosPuntos     reduce using rule 36 (EXP -> TkNum .)
    TkParCierra     reduce using rule 36 (EXP -> TkNum .)


state 22

    (25) EXP -> TkNegacion . EXP
    (18) EXP -> . EXP TkConjuncion EXP
    (19) EXP -> . EXP TkDisyuncion EXP
    (20) EXP -> . EXP TkIgual EXP
    (21) EXP -> . EXP TkDistinto EXP
    (22) EXP -> . IDENT
    (23) EXP -> . LITERAL_BOOL
    (24) EXP -> . TkParAbre EXP TkParCierra
    (25) EXP -> . TkNegacion EXP
    (26) EXP -> . TkResta EXP
    (27) EXP -> . EXP TkMenor EXP
    (28) EXP -> . EXP TkMenorIgual EXP
    (29) EXP -> . EXP TkMayor EXP
    (30) EXP -> . EXP TkMayorIgual EXP
    (31) EXP -> . EXP TkSuma EXP
    (32) EXP -> . EXP TkResta EXP
    (33) EXP -> . EXP TkMult EXP
    (34) EXP -> . EXP TkDiv EXP
    (35) EXP -> . EXP TkMod EXP
    (36) EXP -> . TkNum
    (11) IDENT -> . TkIdent
    (37) LITERAL_BOOL -> . TkTrue
    (38) LITERAL_BOOL -> . TkFalse

    TkParAbre       shift and go to state 19
    TkNegacion      shift and go to state 22
    TkResta         shift and go to state 20
    TkNum           shift and go to state 21
    TkIdent         shift and go to state 27
    TkTrue          shift and go to state 18
    TkFalse         shift and go to state 24

    IDENT                          shift and go to state 26
    EXP                            shift and go to state 38
    LITERAL_BOOL                   shift and go to state 25

state 23

    (64) INST_CONTROLADOR -> TkWhile EXP . TkDosPuntos INST_CONTROLADOR TkEnd INST_CONTROLADOR_A
    (18) EXP -> EXP . TkConjuncion EXP
    (19) EXP -> EXP . TkDisyuncion EXP
    (20) EXP -> EXP . TkIgual EXP
    (21) EXP -> EXP . TkDistinto EXP
    (27) EXP -> EXP . TkMenor EXP
    (28) EXP -> EXP . TkMenorIgual EXP
    (29) EXP -> EXP . TkMayor EXP
    (30) EXP -> EXP . TkMayorIgual EXP
    (31) EXP -> EXP . TkSuma EXP
    (32) EXP -> EXP . TkResta EXP
    (33) EXP -> EXP . TkMult EXP
    (34) EXP -> EXP . TkDiv EXP
    (35) EXP -> EXP . TkMod EXP

    TkDosPuntos     shift and go to state 47
    TkConjuncion    shift and go to state 42
    TkDisyuncion    shift and go to state 45
    TkIgual         shift and go to state 50
    TkDistinto      shift and go to state 51
    TkMenor         shift and go to state 39
    TkMenorIgual    shift and go to state 52
    TkMayor         shift and go to state 46
    TkMayorIgual    shift and go to state 41
    TkSuma          shift and go to state 49
    TkResta         shift and go to state 44
    TkMult          shift and go to state 43
    TkDiv           shift and go to state 48
    TkMod           shift and go to state 40


state 24

    (38) LITERAL_BOOL -> TkFalse .

    TkConjuncion    reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkDisyuncion    reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkIgual         reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkDistinto      reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMenor         reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMenorIgual    reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMayor         reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMayorIgual    reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkSuma          reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkResta         reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMult          reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkDiv           reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkMod           reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkDosPuntos     reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkParCierra     reduce using rule 38 (LITERAL_BOOL -> TkFalse .)
    TkPunto         reduce using rule 38 (LITERAL_BOOL -> TkFalse .)


state 25

    (23) EXP -> LITERAL_BOOL .

    TkConjuncion    reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkDisyuncion    reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkIgual         reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkDistinto      reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMenor         reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMenorIgual    reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMayor         reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMayorIgual    reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkSuma          reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkResta         reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMult          reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkDiv           reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkMod           reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkPunto         reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkDosPuntos     reduce using rule 23 (EXP -> LITERAL_BOOL .)
    TkParCierra     reduce using rule 23 (EXP -> LITERAL_BOOL .)


state 26

    (22) EXP -> IDENT .

    TkConjuncion    reduce using rule 22 (EXP -> IDENT .)
    TkDisyuncion    reduce using rule 22 (EXP -> IDENT .)
    TkIgual         reduce using rule 22 (EXP -> IDENT .)
    TkDistinto      reduce using rule 22 (EXP -> IDENT .)
    TkMenor         reduce using rule 22 (EXP -> IDENT .)
    TkMenorIgual    reduce using rule 22 (EXP -> IDENT .)
    TkMayor         reduce using rule 22 (EXP -> IDENT .)
    TkMayorIgual    reduce using rule 22 (EXP -> IDENT .)
    TkSuma          reduce using rule 22 (EXP -> IDENT .)
    TkResta         reduce using rule 22 (EXP -> IDENT .)
    TkMult          reduce using rule 22 (EXP -> IDENT .)
    TkDiv           reduce using rule 22 (EXP -> IDENT .)
    TkMod           reduce using rule 22 (EXP -> IDENT .)
    TkPunto         reduce using rule 22 (EXP -> IDENT .)
    TkDosPuntos     reduce using rule 22 (EXP -> IDENT .)
    TkParCierra     reduce using rule 22 (EXP -> IDENT .)


state 27

    (11) IDENT -> TkIdent .

    TkComa          reduce using rule 11 (IDENT -> TkIdent .)
    TkOn            reduce using rule 11 (IDENT -> TkIdent .)
    TkEnd           reduce using rule 11 (IDENT -> TkIdent .)
    TkPunto         reduce using rule 11 (IDENT -> TkIdent .)
    TkDosPuntos     reduce using rule 11 (IDENT -> TkIdent .)
    TkConjuncion    reduce using rule 11 (IDENT -> TkIdent .)
    TkDisyuncion    reduce using rule 11 (IDENT -> TkIdent .)
    TkIgual         reduce using rule 11 (IDENT -> TkIdent .)
    TkDistinto      reduce using rule 11 (IDENT -> TkIdent .)
    TkMenor         reduce using rule 11 (IDENT -> TkIdent .)
    TkMenorIgual    reduce using rule 11 (IDENT -> TkIdent .)
    TkMayor         reduce using rule 11 (IDENT -> TkIdent .)
    TkMayorIgual    reduce using rule 11 (IDENT -> TkIdent .)
    TkSuma          reduce using rule 11 (IDENT -> TkIdent .)
    TkResta         reduce using rule 11 (IDENT -> TkIdent .)
    TkMult          reduce using rule 11 (IDENT -> TkIdent .)
    TkDiv           reduce using rule 11 (IDENT -> TkIdent .)
    TkMod           reduce using rule 11 (IDENT -> TkIdent .)
    TkParCierra     reduce using rule 11 (IDENT -> TkIdent .)


state 28

    (63) INST_CONTROLADOR -> TkIf EXP . TkDosPuntos CONTENIDO TkEnd INST_CONTROLADOR_A
    (18) EXP -> EXP . TkConjuncion EXP
    (19) EXP -> EXP . TkDisyuncion EXP
    (20) EXP -> EXP . TkIgual EXP
    (21) EXP -> EXP . TkDistinto EXP
    (27) EXP -> EXP . TkMenor EXP
    (28) EXP -> EXP . TkMenorIgual EXP
    (29) EXP -> EXP . TkMayor EXP
    (30) EXP -> EXP . TkMayorIgual EXP
    (31) EXP -> EXP . TkSuma EXP
    (32) EXP -> EXP . TkResta EXP
    (33) EXP -> EXP . TkMult EXP
    (34) EXP -> EXP . TkDiv EXP
    (35) EXP -> EXP . TkMod EXP

    TkDosPuntos     shift and go to state 53
    TkConjuncion    shift and go to state 42
    TkDisyuncion    shift and go to state 45
    TkIgual         shift and go to state 50
    TkDistinto      shift and go to state 51
    TkMenor         shift and go to state 39
    TkMenorIgual    shift and go to state 52
    TkMayor         shift and go to state 46
    TkMayorIgual    shift and go to state 41
    TkSuma          shift and go to state 49
    TkResta         shift and go to state 44
    TkMult          shift and go to state 43
    TkDiv           shift and go to state 48
    TkMod           shift and go to state 40


state 29

    (61) INST_CONTROLADOR -> TkAdvance IDENT . LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (9) LISTA_IDENT -> . TkComa IDENT LISTA_IDENT
    (10) LISTA_IDENT -> .

    TkComa          shift and go to state 55
    TkPunto         reduce using rule 10 (LISTA_IDENT -> .)

    LISTA_IDENT                    shift and go to state 54

state 30

    (60) INST_CONTROLADOR -> TkActivate IDENT . LISTA_IDENT TkPunto INST_CONTROLADOR_A
    (9) LISTA_IDENT -> . TkComa IDENT LISTA_IDENT
    (10) LISTA_IDENT -> .
